moves the location of the expression editor so the node is more visible Fixed a bug with current units not being cleared when a node is connected after a unit has been entered. Expression box click opens expression dialog. PR Fix

--- a/src/diagram/components/quantity-node.scss
+++ b/src/diagram/components/quantity-node.scss
@@ -99,6 +99,7 @@ $gray-mid: #bcbcbc;
         font-size: 14px;
         line-height:24px;
         padding-right: 5px;
+        cursor: pointer;
         &:empty:before {
           content: attr(placeholder);
           color: gray;
